# supervisor

./: .gitignore  Cargo.toml  build.rs  de.swsnr.app.Argus.Devel.yaml  de.swsnr.app.Supervisor.Devel.yaml
.github/workflows/: flatpak.yml  lint.yml  test.yml
icons/: icons.gresource.xml
src/: main.rs  ui.rs
src/ui/: ApplicationWindow.blp  applicationwindow.rs
